<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cipher Machine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_output_text">OutputText</string>
    <string name="title_cipher_list">Ciphers</string>
    <string name="title_cipher_detail">Cipher Detail</string>
    <string name="title_activity_cipher_selector">CipherSelector</string>
    <string name="title_activity_caesar_shift">CaesarShiftActivity</string>
    <string name="cipher_select_caesar">Caesar Shift</string>
    <string name="cipher_select_vignere">Vignere</string>
    <string name="cipher_select_enigma">Enigma</string>
    <string name="cipher_select_playfair">Playfair</string>
    <string name="cipher_select_route">Route Cipher</string>
    <string name="input_cipher_hint">Input Cipher Text</string>
    <string name="input_type_file">File</string>
    <string name="input_type_manual">Manual</string>
    <string name="title_activity_choose_input_type">Choose Input Type</string>
    <string name="input">Choose Cipher</string>
    <string name="title_activity_shifted_caesars_box">ShiftedCaesarsBoxActivity</string>
    <string name="cipher_select_caesar_box">Shifted Caesar\'s Box</string>
    <string name="title_activity_rail_fence">RailFenceActivity</string>
    <string name="cipher_select_rail_fence">Rail Fence</string>
    <string name="ocr">OCR</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="perform_ocr">Perform OCR</string>
    <string name="title_activity_photo_and_ocr">PhotoAndOCRActivity</string>
    <string name="button_text">Take OCR Photo</string>
    <string name="text_hint">Text Hints</string>
    <string name="no_image">No Image</string>
    <string name="input_ocr_string">Input OCR String</string>
    <string name="cipher_select_adfvgx">ADFVGX</string>
    <string name="cipher_select_vigenere">Vigenere</string>
    <string name="cipher_select_adfgvx">ADFGVX</string>
    <string name="title_activity_vigenere">VigenereActivity</string>
    <string name="title_activity_adfgvx">ADFGVXActivity</string>
    <string name="title_activity_enigma">EnigmaActivity</string>

    <string-array name="rotors_array">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>
    <string-array name="chars_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="enigma_reflector_array">
        <item>B</item>
        <item>C</item>
    </string-array>

    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_playfair">PlayfairActivity</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="tweet">Tweet</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_read_file">ReadFile</string>
    <string name="load_file">Load File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="choose_cipher">Choose Cipher</string>

</resources>