<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OutputText" >

    <TextView
        android:id="@+id/outputTextLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:gravity="center_horizontal"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/buttonSendText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTextInputClick"
        android:text="@string/sms" />

    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEmailInputClick"
        android:text="@string/email" />

    <Button
        android:id="@+id/buttonSendTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTweetInputClick"
        android:text="@string/tweet" />

</LinearLayout>