<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReadFile" >

    <Button
        android:id="@+id/buttonChooseCipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onChooseCipherClicked"
        android:text="@string/choose_cipher"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/button_onoff_indicator_on" />

    <Button
        android:id="@+id/buttonLoadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoadClicked"
        android:text="@string/load_file"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/viewFileInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.66"
        android:gravity="center"
        android:text="@string/no_file_chosen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>